--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.priyam.notesapp">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".NoteApplication"
